--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies 
-        rum: npm ci --force
+        rum: npm ci --legacy-peer-deps
 
       - name: Build Storybook 
         run: npm run buils-storybook
